fix different alignment on settings page to other Account area tabs [YT AD-748]

--- a/src/applications/primo/custom-styles.scss
+++ b/src/applications/primo/custom-styles.scss
@@ -301,7 +301,17 @@ body.custom-nde-theme {
     border-radius: var(--uq-border-radius);
   }
   /* END style "did you mean" div as alert  */
-  /* END page title colour */
+
+  /* fix different alignment on settings page to other Account area tabs  */
+  nde-personal-info {
+    > div:first-child {
+      margin-bottom: 0;
+    }
+    .settings-cards {
+      margin-top: 20px
+    }
+  }
+  /* END fix different alignment on settings page to other Account area tabs  */
 }
 
 @media (max-width: 1919.9px) {
